# hs-aweg

./: .gitignore  README.md  aweg.cabal
lib/: AWEG.hs
lib/AWEG/: Build.hs  Types.hs
lib/AWEG/Parser/: PhoneNumber.hs  Report.hs  Response.hs
