cabal-version: 3.0

name: aweg
version: 0.1.0.0
homepage: https://github.com/mordae/hs-aweg
bug-reports: https://github.com/mordae/hs-aweg/issues

license: MIT
license-file: LICENSE
copyright: Jan Hamal Dvořák
maintainer: mordae@anilinux.org
author: Jan Hamal Dvořák

synopsis: AnnyWay Enterprise SMS Gateway Client
description:
  Client for the SMS gateway used by the Czech T-Mobile.

category: Network
build-type: Simple
extra-source-files: README.md

source-repository head
    type: git
    location: https://github.com/mordae/hs-aweg

common common
    default-language: Haskell2010

    default-extensions:
        BlockArguments
        DataKinds
        DeriveGeneric
        DuplicateRecordFields
        FlexibleContexts
        FlexibleInstances
        GeneralizedNewtypeDeriving
        LambdaCase
        MultiParamTypeClasses
        NamedFieldPuns
        NoImplicitPrelude
        NumericUnderscores
        OverloadedStrings
        ParallelListComp
        QuasiQuotes
        Rank2Types
        RecordWildCards
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeFamilies
        UndecidableInstances

    ghc-options:
        -Wall
        -Wcompat
        -Wincomplete-uni-patterns
        -Wincomplete-record-updates
        -Widentities
        -Wredundant-constraints

    build-depends:
      , base                        >=4.13 && <5
      , praha                       >=0.1  && <0.2
      , praha-logger                >=0.1  && <0.2
      , bytestring                  >=0.10 && <0.12
      , conduit                     >=1.3  && <1.4
      , http-client                 <=0.7  && <0.8
      , http-conduit                >=2.3  && <2.4
      , http-types                  >=0.12 && <0.13
      , text                        >=1.2  && <1.3
      , time                        >=1.9  && <1.12
      , unliftio                    >=0.2  && <0.3


library
    import: common

    exposed-modules:
        AWEG.Types
        AWEG

    hs-source-dirs: lib
    other-modules:
        AWEG.Parser.PhoneNumber
        AWEG.Parser.Response
        AWEG.Parser.Report
        AWEG.Build
        Paths_aweg

    ghc-options:
        -Wunused-packages

-- EOF
